third_party/move/move-compiler-v2/tests/match-checks/range_overlap_reachability.exp

Diagnostics:
error: unreachable pattern
   ┌─ tests/match-checks/range_overlap_reachability.move:15:13
   │
15 │             (5..8, true) => 2,
   │             ^^^^^^^^^^^^

error: unreachable pattern
   ┌─ tests/match-checks/range_overlap_reachability.move:25:13
   │
25 │             5..15 => 3,
   │             ^^^^^
